Minor layout issues

--- a/scss/_infowindow-expandable-list.scss
+++ b/scss/_infowindow-expandable-list.scss
@@ -19,37 +19,30 @@
 
 .expandable_list {
   .urvalcontainer {
-    // border-bottom: 1px solid #d9d9d9;
     font-size: 12px;
     font-weight: bold;
     padding: 0;
     z-index: 10;
     display: flex;
     flex-direction: column;
-    max-height: 60em;
+    max-height: 40em;
+    margin-right: 0.5em;
     overflow-y: scroll;
   }
 
   .urval-textnode-container {
     font-size: 15px;
+    font-weight: bold;
     margin: 1em;
   }
 
   .urvalelement {
+    box-sizing: border-box; 
     border: none;
     width: 100%;
     margin-right: 0;
     padding: 0;
   }
-
-  // .urvalelement {
-  //   border-bottom: 3px solid  $white;
-  //   cursor: pointer;
-  //   display: inline-block;
-  //   font-weight: normal;
-  //   margin-right: 1em;
-  //   padding: 0.5em 0;
-  // }
 
   .urvalcontent {
     box-sizing: content-box;
@@ -94,7 +87,7 @@
   }
 
   .listelement {
-    margin: 0 1em;
+    margin: 0 0.3em;
     &:not(:last-child) {
       border-bottom: 1px solid #d9d9d9;
     }
